--- a/src/styles/colours.scss
+++ b/src/styles/colours.scss
@@ -1,33 +1,33 @@
 // Neutral:
 $neutral-900: #1c1a19;
-$neutral-800: #201E1D;
-$neutral-700: #34302D;
-$neutral-600: #4A4846;
-$neutral-400: #C0BFBF;
-$neutral-300: #DEDCDA;
-$neutral-200: #EFEDEB;
-$neutral-100: #FBF9F7;
-$neutral-0: #FFFFFF;
+$neutral-800: #201e1d;
+$neutral-700: #34302d;
+$neutral-600: #4a4846;
+$neutral-400: #c0bfbf;
+$neutral-300: #dedcda;
+$neutral-200: #efedeb;
+$neutral-100: #fbf9f7;
+$neutral-0: #ffffff;
 
 // Blue:
-$blue-900: #022B4A;
-$blue-800: #5792C0;
-$blue-700: #75B0DE;
-$blue-500: #93CEFC;
-$blue-200: #E1F1FE;
+$blue-900: #022b4a;
+$blue-800: #5792c0;
+$blue-700: #75b0de;
+$blue-500: #93cefc;
+$blue-200: #e1f1fe;
 
 // Green:
-$green-900: #132A18;
+$green-900: #132a18;
 $green-700: #008531;
-$green-500: #9DD3A9;
-$green-200: #E9F5EA;
+$green-500: #9dd3a9;
+$green-200: #e9f5ea;
 
 // Yellow:
-$yellow-900: #4A3003;
-$yellow-700: #EA9806;
-$yellow-500: #FACC79;
-$yellow-200: #FFF5E1;
+$yellow-900: #4a3003;
+$yellow-700: #ea9806;
+$yellow-500: #facc79;
+$yellow-200: #fff5e1;
 
 // Red:
-$red-600: #D92D20;
-$red-400: #F04438;
+$red-600: #d92d20;
+$red-400: #f04438;
