[Update] installed font files locally and set up font style preset mixin

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -6,6 +6,11 @@ header {
       list-style: none;
       display: flex;
       gap: 12px;
+
+      li {
+        @include fontStyles('preset-1');
+        color: blue;
+      }
     }
   }
 }
