--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -17,7 +17,6 @@
 $font-family-dm-sans: "DM Sans", 'Inter', 'Poppins', 'Helvetica Neue', Arial, sans-serif;
 $font-family-fira-code: 'Fira Code', 'JetBrains Mono', 'Cascadia Code', 'Menlo', 'Consolas', 'Courier New', monospace;
 
-// TODO: create mixins for font-family, weight, size, line-height, letter-spacing
 $text-presets: (
  'preset-1': (
      font-family: $font-family-dm-sans,
@@ -30,8 +29,50 @@ $text-presets: (
       font-family: $font-family-dm-sans,
       font-size: 32px,
       line-height: 1.3,
-      letter-spacing: -0.015em,
+      letter-spacing: -0.005em,
       font-weight: 800,
+  ),
+  'preset-3': (
+      font-family: $font-family-dm-sans,
+      font-size: 28px,
+      line-height: 1.3,
+      letter-spacing: -0.005em,
+      font-weight: 700,
+  ),
+  'preset-4': (
+      font-family: $font-family-dm-sans,
+      font-size: 24px,
+      line-height: 1.3,
+      letter-spacing: -0.005em,
+      font-weight: 600,
+  ),
+  'preset-5': (
+      font-family: $font-family-dm-sans,
+      font-size: 20px,
+      line-height: 1.3,
+      letter-spacing: -0.005em,
+      font-weight: 600,
+  ),
+  'preset-6': (
+      font-family: $font-family-dm-sans,
+      font-size: 18px,
+      line-height: 1.5,
+      letter-spacing: -0.005em,
+      font-weight: 500,
+  ),
+  'preset-7': (
+      font-family: $font-family-dm-sans,
+      font-size: 18px,
+      line-height: 1.5,
+      letter-spacing: -0.002em,
+      font-weight: 400,
+  ),
+  'preset-8': (
+      font-family: $font-family-fira-code,
+      font-size: 16px,
+      line-height: 1.46,
+      letter-spacing: -0.004em,
+      font-weight: 400,
   )
 );
 
