--- a/src/styles/_spacing.scss
+++ b/src/styles/_spacing.scss
@@ -12,3 +12,20 @@ $spacing-500: 40px;
 $spacing-600: 48px;
 $spacing-800: 64px;
 $spacing-1000: 80px;
+
+// Border-radius:
+$radius-0: 0px;
+$radius-4: 4px;
+$radius-6: 6px;
+$radius-8: 8px;
+$radius-10: 10px;
+$radius-12: 12px;
+$radius-14: 14px;
+$radius-16: 16px;
+$radius-20: 20px;
+$radius-24: 24px;
+$radius-full: 100%;
+
+// Max-widths:
+$container-max-width: 640px;
+$icon-max-width: 40px;
