--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -68,6 +68,13 @@ $text-presets: (
       font-weight: 400,
   ),
   'preset-8': (
+      font-family: $font-family-dm-sans,
+      font-size: 16px,
+      line-height: 1.3,
+      letter-spacing: -0.002em,
+      font-weight: 400,
+  ),
+  'preset-9': (
       font-family: $font-family-fira-code,
       font-size: 16px,
       line-height: 1.46,
