[Update] implemented dark mode toggle and updated colour vars to use css variables for conditional assignment

--- a/src/components/HomeIntro/HomeIntro.scss
+++ b/src/components/HomeIntro/HomeIntro.scss
@@ -2,7 +2,7 @@
 @use "../../../src/styles/colours" as *;
 
 .home-intro {
-  border-bottom: solid 1px $neutral-200;
+  border-bottom: solid 1px var(--page-border);
   margin: $spacing-400 0 0;
   padding: 0 0 $spacing-400 0;
 
