[Update] set up routing and scaffolding out pages

--- a/src/components/HomeIntro/HomeIntro.scss
+++ b/src/components/HomeIntro/HomeIntro.scss
@@ -18,6 +18,8 @@
       display: flex;
 
         svg {
+          overflow: initial;
+
           > path {
             &:first-of-type {
               fill: var(--intro-social-icon-background);
