--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,6 +3,7 @@
 @use "spacing" as *;
 
 h1, h2, h3, h4, h5, h6 {
+  transition: color .3s ease-in-out;
   color: var(--page-body-heading);
 }
 
@@ -33,6 +34,7 @@ h6 {
 li, p, a {
   @include fontStyles('preset-7');
   color: var(--page-body-text);
+  transition: color .3s ease-in-out;
 }
 
 html {
@@ -64,6 +66,7 @@ html {
   margin: auto;
   min-height: 100vh;
   background: var(--page-background);
+  transition: background-color .3s ease-in-out;
   display: flex;
   justify-content: center;
 
@@ -73,6 +76,7 @@ html {
 
   #main-content {
     border: solid 1px var(--page-border);
+    transition: border-color .3s ease-in-out;
     border-top: none;
     padding: $spacing-200 $spacing-150 $spacing-100;
     margin: 0 $spacing-150 0;
