--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -39,6 +39,10 @@ header {
             @include fontStyles('preset-8');
             text-decoration: none;
 
+            &:hover {
+              text-decoration: underline 3px var(--blue-500);
+            }
+
             &.active {
               text-decoration: underline 3px solid var(--blue-500);
             }
