--- a/src/components/SocialLinks/SocialLinks.scss
+++ b/src/components/SocialLinks/SocialLinks.scss
@@ -1,7 +1,7 @@
 @use "../../../src/styles/spacing" as *;
 @use "../../../src/styles/colours" as *;
 
-.home-intro__socials {
+.page-header-socials {
   display: flex;
   gap: $spacing-150;
 
