[Update] styling updates for links, images, text and spacing

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -21,7 +21,8 @@ header {
         .profile-photo {
           max-width: $icon-max-width;
           width: 100%;
-          height: auto
+          height: auto;
+          margin: 0
         }
 
       ul {
