--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -19,6 +19,38 @@ blockquote {
   padding-left: $spacing-300;
 }
 
+code {
+  border-radius: $radius-12;
+  background-color: rgba(27, 31, 35, 0.05);
+  padding: 2px 4px;
+  font-family: monospace;
+  color: #e06c75;
+}
+
+table {
+  border-collapse: collapse;
+  border-radius: $radius-12;
+
+  tr {
+    th, td {
+      padding: 6px 12px 8px;
+    }
+
+    th {
+      @include fontStyles('preset-6');
+      text-align: left;
+    }
+
+    td {
+      @include fontStyles('preset-8');
+    }
+  }
+
+  table, th, td {
+    border: solid 1px var(--neutral-200);
+  }
+}
+
 img {
   max-width: 100%;
   height: auto;
