--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -21,6 +21,12 @@
 
       li {
         a {
+          transition: ease .2s;
+
+          &:hover {
+            opacity: 0.7;
+          }
+
           svg {
             max-width: $icon-max-width;
             width: 100%;
