--- a/src/components/Nav/HamburgerMenu/HamburgerMenu.scss
+++ b/src/components/Nav/HamburgerMenu/HamburgerMenu.scss
@@ -9,8 +9,13 @@
   border-radius: $radius-10;
   background-color: transparent;
   margin: 0 $spacing-075 0 0;
+  transition: ease .2s;
 
-  @media (min-width: 768px) {
+  &:hover {
+    opacity: 0.7;
+  }
+
+  @media (min-width: $media-md) {
     display: none;
   }
 
