--- a/src/components/Nav/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/components/Nav/ThemeSwitcher/ThemeSwitcher.scss
@@ -10,4 +10,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: ease .2s;
+
+    &:hover {
+      opacity: 0.7;
+  }
 }
