--- a/src/components/SocialLinks/SocialLinks.scss
+++ b/src/components/SocialLinks/SocialLinks.scss
@@ -7,6 +7,11 @@
 
   a {
     display: flex;
+    transition: ease .2s;
+
+    &:hover {
+      opacity: 0.7;
+    }
 
     svg {
       overflow: initial;
