[Update] added latest articles component to home page and styling

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,6 +4,8 @@
 
 #main-footer {
   margin-top: auto;
+  border-top: solid 1px var(--page-border);
+
   .footer-wrapper {
     display: flex;
     justify-content: space-between;
