--- a/src/components/SingleBlogLinks/SingleBlogLinks.scss
+++ b/src/components/SingleBlogLinks/SingleBlogLinks.scss
@@ -7,9 +7,8 @@
   margin: $spacing-250 0 0 0;
   padding: 0 0 $spacing-250;
 
-  &:last-child {
+  &:last-of-type {
     border-bottom: 0;
-    padding: 0;
   }
 
   .single-blog-links__title {
