--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -19,7 +19,7 @@
     border: solid 1px var(--page-border);
     transition: border-color .3s ease-in-out;
     border-top: none;
-    padding: $spacing-200 $spacing-150 $spacing-100;
+    padding: $spacing-200 10px $spacing-100;
     margin: 0 $spacing-050 0;
 
     > div {
