[Update] styling for all desktop pages, including single blog page formatting styles

--- a/src/components/Nav/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/components/Nav/ThemeSwitcher/ThemeSwitcher.scss
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   transition: ease .2s;
+  background-color: var(--page-background);
 
     &:hover {
       opacity: 0.7;
