--- a/src/components/LatestArticles/LatestArticles.scss
+++ b/src/components/LatestArticles/LatestArticles.scss
@@ -6,7 +6,11 @@
   z-index: 1;
   position: relative;
   width: fit-content;
-  margin: $spacing-600 0 $spacing-150;
+  margin: $spacing-400 0 $spacing-150;
+
+  @media (min-width: $media-lg) {
+    margin: $spacing-600 0 $spacing-150;
+  }
 
   .has-style-side-rule {
     background-color: var(--blue-500);
@@ -29,8 +33,12 @@
 .view-all-btn {
   text-decoration: underline solid var(--blue-500) 3px;
   transition: opacity .3s ease;
-  margin: $spacing-400 0 $spacing-600 ;
+  margin: $spacing-400 0;
   @include fontStyles('preset-6');
+
+  @media (min-width: $media-lg) {
+    margin: $spacing-400 0 $spacing-600 ;
+  }
 
   &:hover {
     opacity: .7;
