--- a/src/components/SocialLinks/SocialLinks.scss
+++ b/src/components/SocialLinks/SocialLinks.scss
@@ -4,7 +4,11 @@
 .page-header-socials {
   display: flex;
   gap: $spacing-150;
-  margin: 0 0 $spacing-200;
+  margin: 0;
+  
+  @media (min-width: $media-lg) {
+    margin: 0 0 $spacing-200;
+  }
 
   .social-logo {
     a {
