--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -79,57 +79,8 @@ code {
   padding: $spacing-025 $spacing-050;
   font-family: monospace;
   color: #e06c75;
-}
-
-table {
-  border-radius: $radius-12;
-  border-spacing: 0;
-
-  tr {
-    &:last-child {
-      td {
-        &:first-child {
-
-          border-radius: 0 0 0 $radius-12;
-        }
-        &:last-child {
-          border-radius: 0 0 $radius-12 0;
-        }
-      }
-    }
-
-    &:not(:last-child) {
-      td {
-        border-bottom: 0;
-      }
-    }
-
-    th, td {
-      padding: $spacing-075 18px $spacing-100;
-    }
-
-    th {
-      @include fontStyles('preset-6');
-      text-align: left;
-      border-bottom: 0;
-
-      &:first-child {
-        border-radius: $radius-12 0 0 0;
-      }
-
-      &:last-child {
-        border-radius: 0 $radius-12 0 0;
-      }
-    }
-
-    td {
-      @include fontStyles('preset-8');
-    }
-  }
-
-  table, th, td {
-    border: solid 1px var(--neutral-200);
-  }
+  word-break: break-word;
+  white-space: pre-wrap;
 }
 
 img {
