--- a/src/styles/_colours.scss
+++ b/src/styles/_colours.scss
@@ -31,7 +31,7 @@ body {
 
   /* Red */
   --red-600: #d92d20;
-  --red-400: #f04438;
+  --red-400: #ff5100;
 
   /* Colour Presets: */
   --page-background: var(--neutral-100);
